# dns-block

./: Cargo.toml  build_for_raspberry_pi.sh  test1.txt
scripts/: getlists.sh
src/: #dns_resolver.rs#  cli.rs  dns_resolver.rs  filter.rs  main.rs  statistics.rs  sub_domains.rs
